# git-credential-store-regex-rs

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.changes/: v0.4.1.md  v0.4.2.md
.github/workflows/: rust-release.yml
src/: main.rs
