[package]
name = "git-credential-store-regex"
version = "0.3.0"
edition = "2024"
description = "A Git credential helper that provides credentials by matching attributes against regular expressions"
repository = "https://github.com/antoniszymanski/git-credential-store-regex-rs"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
gitcredential = { version = "0.1.1", default-features = false }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
snafu = "0.9.0"
